Footer, правки в верстке

--- a/src/app/components/card-product/card-product.component.scss
+++ b/src/app/components/card-product/card-product.component.scss
@@ -14,7 +14,7 @@
 }
 
 .img-container {
-  width: 350px;
+  width: 200px;
 }
 
 .title {
@@ -24,7 +24,8 @@
 }
 
 .input-count {
-  width: 30px;
+  width: 40px;
+  text-align: center;
 }
 
 .btn-close {
