--- a/src/app/components/carousel/carousel.component.scss
+++ b/src/app/components/carousel/carousel.component.scss
@@ -1,4 +1,10 @@
 .carousel-container {
-  margin-top: 20px;
+  margin-top: 50px;
+  margin-bottom: 100px;
   width: 80%;
+
+}
+
+.carousel-item {
+  height: 350px;
 }
