--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 
   <app-global-error></app-global-error>
   <app-navigation></app-navigation>
+
   <router-outlet></router-outlet>
+  <app-footer></app-footer>
 
-
+  <p-toast Position="top-right"></p-toast>
 
