--- a/src/app/components/card-product/card-product.component.html
+++ b/src/app/components/card-product/card-product.component.html
@@ -1,9 +1,9 @@
 <!--Карточка каталога-->
 <ng-container *ngIf="hideCart; else cart">
 
-  <div class="d-flex flex-wrap justify-content-around a">
+  <div class="d-flex flex-wrap justify-content-around mb-5">
 
-    <div class="card-product  card m-4  p-2">
+    <div class="card-product  card m-4  p-2 shadow  bg-body-tertiary rounded">
       <div class="card-img d-flex align-items-center bg-white rounded-5">
         <img src="http://localhost:3000/public/{{product.image}}"
         [alt]="product.title"
@@ -32,21 +32,27 @@
 
       <div class="d-flex justify-content-between">
         <button class="py-2 px-3 rounded btn"
-        [disabled]="isExist(product)"
-        (click)="addToCart(product)"
-        >
-        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
+                [disabled]="isExist(product)"
+                (click)="addToCart(product)">
+        <svg xmlns="http://www.w3.org/2000/svg"
+             width="25"
+             height="25"
+             fill="currentColor"
+             class="bi bi-cart4"
+             viewBox="0 0 16 16">
           <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
         </svg>
         </button>
 
         <button class="py-2 px-4 rounded  btn"
-        (click)="addToFavorites(product)"
-        [ngClass]="{
-         'text-danger': product.favorite
-        }"
-        >
-          <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-heart-half" viewBox="0 0 16 16">
+                (click)="addToFavorites(product)"
+                [ngClass]="{'text-danger': product.favorite}">
+          <svg  xmlns="http://www.w3.org/2000/svg"
+                width="25"
+                height="25"
+                fill="currentColor"
+                class="bi bi-heart-half"
+                viewBox="0 0 16 16">
             <path d="M8 2.748v11.047c3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
           </svg>
         </button>
@@ -63,55 +69,51 @@
 
   <div class="d-flex flex-column m-3">
 
-    <div class="card p-5 mb-3 d-flex flex-row  align-items-stretch justify-content-between">
+    <div class="card p-3 mb-3 d-flex flex-row  align-items-stretch">
 
-      <div class="d-flex align-items-center img-container">
+      <div class="d-flex align-items-center border img-container me-4">
         <img src="http://localhost:3000/public/{{product.image}}"
              [alt]="product.title"
              class="mb-2 rounded img-card">
       </div>
 
-      <div class="d-flex flex-column justify-content-around">
+      <div class="d-flex flex-row justify-content-between w-100">
+        <div >
+          <h3 class="w-100 fs-3 card-title mb-3">{{ product.title }}</h3>
 
-        <h3 class="w-100 fs-3 card-title mb-3">{{ product.title }}</h3>
+          <p class="fs-5 mb-3 "> {{ product.description }}</p>
 
-        <p class="fs-5 mb-3 "> {{ product.description }}</p>
+          <div>
 
-        <div>
-          <!-- <button
-          class=" py-2 px-4 rounded  btn border-0"
-          [ngClass]="{
-            'btn-outline-dark': !details,
-            'bg-success-subtle': details
-          }"
-          (click)="details = !details"
-          >
+            <div class="d-flex">
+              <button [disabled]="product.count === 1"
+                      type="button"
+                      class="rounded border border-light-subtle p-2"
+                      (click)="countProduct(false, product)"
+                      >-</button>
+              <input class="input-count rounded border border-light-subtle p-2"
+                     type="text"
+                     min="1"
+                     [value]="product.count"
+                     [(ngModel)]='product.count'
+                     (change)="countChange(product)"
+                     >
+              <button type="button"
+                      class="rounded border border-light-subtle"
+                      (click)="countProduct(true, product)"
+                      >+</button>
+            </div>
 
-            {{ details ? 'Скрыть' : 'Показать' }} детали
-          </button> -->
-
-          <!-- <div *ngIf="details">
-            <p> {{ product.description }}</p>
-          </div> -->
-
-          <div class="d-flex">
-            <button [disabled]="product.count === 1" type="button" class="" (click)="countProduct(false, product)">-</button>
-            <input class="input-count"
-                   type="text"
-                   min="1"
-                   [value]="product.count"
-                   [(ngModel)]='product.count'
-                   (change)="countChange(product)"
-                   >
-            <button type="button" class="btn-outline-dark" (click)="countProduct(true, product)">+</button>
           </div>
-
         </div>
+
+        <div class=" m-3 fs-5 w-25 d-flex align-items-center justify-content-center">
+          Цена: {{ product.forAllPrice }} руб.
+        </div>
+
       </div>
 
-      <div class=" m-3 fs-5 w-25 d-flex align-items-center justify-content-center">
-        Цена: {{ product.forAllPrice }} руб.
-      </div>
+
 
       <button type="button"
               class="btn-close position-absolute top-10 end-5"
