--- a/src/app/components/carousel/carousel.component.html
+++ b/src/app/components/carousel/carousel.component.html
@@ -8,13 +8,32 @@
       </div>
       <div class="carousel-inner h-50 rounded-4">
         <div class="carousel-item active">
-          <img src="assets/img/carousel-img-1.jpg" class="d-block w-100" alt="1">
+
+          <img  src="assets/img/carousel-img-1.jpg" class="d-block w-100" alt="1">
+          <div class="carousel-caption d-none d-md-block bg-light rounded text-black" style="--bs-bg-opacity: .8">
+            <h3>Акция "Двойное удовольствие"!</h3>
+            <p class="fs-4">При покупке двух любых мыл от мастера Тишина третье вы получаете в подарок!</p>
+          </div>
+
         </div>
         <div class="carousel-item">
+
           <img src="assets/img/carousel-img-2.jpg" class="d-block w-100" alt="2">
+          <div class="carousel-caption d-none d-md-block bg-light rounded text-black" style="--bs-bg-opacity: .8">
+            <h3> Акция "Семейное благополучие"</h3>
+            <p class="fs-4">Скидка 20% на покупку набора мыл для всей семьи от мастера Тишина.</p>
+          </div>
+
+
         </div>
         <div class="carousel-item">
+
           <img src="assets/img/carousel-img-3.jpg" class="d-block w-100" alt="3">
+          <div class="carousel-caption d-none d-md-block bg-light rounded text-black" style="--bs-bg-opacity: .8">
+            <h3>Акция "Любимому человеку"</h3>
+            <p class="fs-4">При заказе индивидуального набора мыл с нанесением имени получите бесплатную доставку и подарочную упаковку!</p>
+          </div>
+
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
