--- a/src/app/pages/about-page/about-page.component.scss
+++ b/src/app/pages/about-page/about-page.component.scss
@@ -1,3 +1,4 @@
+
 .body-about-style {
   background: url(/assets/img/bg.png);
   background-size: cover;
@@ -6,6 +7,9 @@
   overflow: hidden;
   position: relative;
 }
+
+
+
 .section-about {
   font-family: Madetheartist;
   height: 500px;
@@ -16,9 +20,12 @@
   font-size:5rem;
 }
 
-.decor {
-  border-radius: 100%;
+.decor-color {
   background-color: rgb(23 14 75 / 78%);
+}
+
+.decor-position {
+  border-radius: 100%;
   width: 100%;
   height: 164%;
   position: absolute;
@@ -27,7 +34,32 @@
   top: -67%;
 }
 
+
+@media (max-width: 900px) {
+  .decor-position {
+    border-radius: 100%;
+    width: 123%;
+    height: 86%;
+    left: -28%;
+    top: 5%;
+  }
+
+  .text-about {
+    font-size:3rem;
+  }
+}
+
+
 .title-about-section {
   font-family:'Times New Roman', Times, serif;
   font-size: 50px;
+}
+
+.card-item {
+  height: 400px;
+  width:  350px;
+}
+
+.img-container {
+  height: 150px;
 }
