--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -1,5 +1,5 @@
 <div class="margin-top">
-  <div class="mt-4">
+  <div class="mt-4 ms-5">
     <h4>Создание карточки товара</h4>
     <div class="mt-3 user-info" [formGroup]="productForm">
       <div class="mt-3">
@@ -12,12 +12,12 @@
       </div>
       <div class="mt-3">
         <span class="mx-3">Описание товара</span>
-        <input type="text"
-               class="mt-3"
-               formControlName="description"
-               pInputText
-        />
+        <textarea class="mt-3" name="Описание товара"  cols="30" rows="5" pInputText formControlName="description">
+          Описание товара
+        </textarea>
       </div>
+
+
 
       <div class="mt-3">
         <span class="mx-3">Категория</span>
@@ -42,7 +42,6 @@
         <input type="file"
                class="mt-3"
                (change)="selectFile($event)"
-
                pInputText
         />
       </div>
