--- a/src/app/pages/favorites/favorites.component.html
+++ b/src/app/pages/favorites/favorites.component.html
@@ -33,6 +33,12 @@
           </button>
         </div>
 
+        <button type="button"
+        class="btn-close position-absolute "
+        aria-label="Закрыть"
+        data-bs-title="Удалить товар" (click)="removeToCard(item)">
+      </button>
+
 
 
 
